# klein-sniper

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  config.json
logs/html/: debug-rog_ally.html
src/: config.rs  main.rs  model.rs  normalizer.rs  utils.rs
src/analyzer/: lifecycle.rs  market_indicators.rs  mod.rs  price_analysis.rs
src/notifier/: mod.rs  telegram.rs
src/notifier/telegram/: command_handler.rs  listener.rs  mod.rs  sender.rs
src/parser/: klein_parser.rs  mod.rs
src/scraper/: fetcher.rs  mod.rs  traits.rs
src/storage/: mod.rs  sqlite.rs
