[package]
name = "klein-sniper"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.15", features = ["blocking"] }
chrono = { version = "0.4", features = ["serde"] }
