[package]
name = "klein-sniper"
version = "0.1.1"
edition = "2024"

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.15", features = ["blocking","json"] }
chrono = { version = "0.4.40", features = ["serde"] }
scraper = "0.23.1"
rusqlite = { version = "0.34.0", features = ["chrono","bundled"] }
thiserror = "2.0.12"
async-trait = "0.1.88"
tracing ="0.1.41"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
rand ="0.9.0"
futures = "0.3.31"

[build-dependencies]
winres = "0.1"